# essentials_proposal

./: .clang-format  .gitmodules  CMakeLists.txt  buildit.sh  todo
benchmarks/: CMakeLists.txt  test_benchmark.cpp
examples/: CMakeLists.txt  scope_guard_ex.cpp
include/: core.h  scope_guard.h  traits.h
tests/: CMakeLists.txt  core_test.cpp  scope_guard_test.cpp  trats_test.cpp
